deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-reply-webhook-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sms-reply-webhook
  template:
    metadata:
      labels:
        app: sms-reply-webhook
    spec:
      containers:
      - name: sms-reply-webhook
        image: clementv78/sms-reply-webhook:latest
        ports:
        - containerPort: 8181
