ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-reply-webhook-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: notif.devops.0xclem.cloudns.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sms-reply-webhook-service
            port:
              number: 8181
